--- a/styles/modules/blocks/bicycles.scss
+++ b/styles/modules/blocks/bicycles.scss
@@ -31,10 +31,10 @@
     }
     &__title {
         margin: 0;
-        font-weight: 500;
-        font-size: 55px;
-        line-height: 60px;
-        @extend %titleFont;
+        font-weight: 700;
+        font-size: 3.819vw;
+        line-height: 4.167vw;
+        letter-spacing: -0.5px;
         @media screen and (max-width: 572px) {
             font-size: 32px;
             line-height: 40px;
