--- a/styles/modules/blocks/flex-element.scss
+++ b/styles/modules/blocks/flex-element.scss
@@ -1,11 +1,8 @@
 .flex-element {
     display: flex;
     padding-left: 8.333vw;
-    gap: 250px;
+    gap: 3.472vw;
     position: relative;
-    @media screen and (max-width: 1324px) {
-        gap: 15vw;
-        }
         @media screen and (max-width: 767px) {
             gap: 10vw;
             }
@@ -30,7 +27,10 @@
         padding-top: 1.389vw;
         object-fit: cover;
         height: 58.056vw;
-        @media screen and (max-width: 767px) {
+        position: absolute;
+        right: 0;
+        top: 0;
+        @media screen and (max-width: 572px) {
             width: 254px;
             height: 348px;
             padding-top: 0;
@@ -62,6 +62,10 @@
             width: 284px;
             height: 46px;
             margin-top: 0;
+            font-size: 13px;
+            line-height: 19px;
+            font-weight: 600;
+            letter-spacing: 1px;
             }
     }
     &__text-line {
@@ -69,7 +73,7 @@
         font-weight: 400px;
         font-size: 1.250vw;
         line-height: 1;
-        @media screen and (max-width: 767px) {
+        @media screen and (max-width: 804px) {
             display: none;
             }
     }
@@ -118,8 +122,8 @@
         height: 20.833vw;
         box-sizing: border-box;
         padding: 1.389vw 3.472vw;
-        position: absolute;
-        left: -13.889vw;
+        position: sticky;
+        top: 24.097vw;
         background-color: #F4F4F4;
         box-shadow: -20px 60px 220px rgb(0 0 0 / 25%);
         border-radius: 20px;
@@ -133,12 +137,15 @@
             }
     }
     &__popup {
-        width: 56.25vw;
+        min-width: 56.25vw;
         height: 59.444vw;
         position: relative;
         right: 0;
         bottom: 0;
-        @media screen and (max-width: 767px) {
+        padding-bottom: 5.486vw;
+        padding-top: 24.097vw;
+        box-sizing: border-box;
+        @media screen and (max-width: 572px) {
             width: 284px;
             height: 348px;
             align-self: end;
@@ -154,10 +161,6 @@
                             display: none;
                             } 
             }
-            @media screen and (max-width: 767px) {
-                width: 254px;
-                height: 348px;
-                }
     }
 }
 .flex-element__rim-bike-fix_position_middle {
