--- a/styles/modules/blocks/header.scss
+++ b/styles/modules/blocks/header.scss
@@ -29,6 +29,10 @@
         font-size: 14px;
         line-height: 18px;
         transition: $transition;
+        @media screen and (max-width: 767px) {
+            font-size: 18px;
+            font-weight: 500;
+        }
         &:hover {
             opacity: 0.7;
         }
@@ -79,7 +83,8 @@
         transition: -50%;
         transform: translate(-50%);
         box-sizing: border-box;
-        width: 320px;
+        width: 100%;
+        height: 100%;
     }
     &__popup-header {
         padding: 0 18px 0 0;
