--- a/styles/modules/blocks/quote.scss
+++ b/styles/modules/blocks/quote.scss
@@ -39,6 +39,7 @@
         padding: 0;
         font-size: 2.361vw;
         line-height: 3.056vw;
+        font-weight: 600;
         @media screen and (max-width: 572px) {
             font-size: 23px;
             line-height: 29px;
