--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,4 @@
+@import "../index.css";
 @import "./modules/variables.scss";
 @import "./modules/mixins.scss";
 @import "./modules/blocks/page.scss";
