--- a/styles/modules/blocks/bicycles.scss
+++ b/styles/modules/blocks/bicycles.scss
@@ -108,6 +108,7 @@
         background-color: #F4F4F4;
         box-shadow: 0 20px 140px rgb(0 0 0 / 6%);
         border-radius: 20px;
+        transition: $transition;
         &:hover {
             box-shadow: 0 20px 140px rgb(0 0 0 / 11%);
         }
@@ -131,6 +132,7 @@
         display: flex;
         flex-direction: column;
         gap: 1.528vw;
+        transition: $transition;
         @media screen and (max-width: 572px) {
             width: 284px;
             height: 306px;
