--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import "../index.css";
 .text-block__title {
   font-size: 3.819vw;
   line-height: 1.09;
@@ -36,6 +37,7 @@
   align-items: center;
   background-color: #F4F4F4;
   z-index: 2;
+  gap: 34px;
 }
 @media screen and (max-width: 767px) {
   .header__links {
@@ -49,20 +51,20 @@
   line-height: 18px;
   transition: all 0.5s ease;
 }
+.header__link:last-of-type {
+  margin-right: 120px;
+}
 @media screen and (max-width: 767px) {
   .header__link {
     font-size: 18px;
     font-weight: 500;
   }
+  .header__link:last-of-type {
+    margin-right: 0;
+  }
 }
 .header__link:hover {
   opacity: 0.7;
-}
-.header__link_margin_right {
-  margin-right: 34px;
-}
-.header__link_margin_right:last-of-type {
-  margin-right: 120px;
 }
 .header__button {
   display: none;
@@ -132,18 +134,18 @@
   position: relative;
   width: 22px;
 }
-.header__button-x:hover .header__image-left {
+.header__button-x:hover .header__image-left-line {
   box-shadow: 0px 2px 1px 1px rgb(175, 174, 174);
 }
-.header__button-x:hover .header__image-right {
+.header__button-x:hover .header__image-right-line {
   box-shadow: -3px 0px 1px 0px rgb(175, 174, 174);
 }
-.header__image-left {
+.header__image-left-line {
   position: absolute;
   left: 0;
   transition: all 0.5s ease;
 }
-.header__image-right {
+.header__image-right-line {
   transform: rotate(-90deg);
   position: absolute;
   left: 0;
@@ -181,12 +183,6 @@
     margin-top: 0;
   }
 }
-.theme-button__input-container {
-  width: 44px;
-  height: 24px;
-  border-radius: 50px;
-  position: relative;
-}
 .theme-button__toggle {
   -webkit-appearance: none;
   appearance: none;
@@ -198,6 +194,10 @@
   border-radius: 20px;
   outline: none;
   cursor: pointer;
+  width: 44px;
+  height: 24px;
+  border-radius: 50px;
+  position: relative;
 }
 .theme-button__toggle:after {
   content: "";
@@ -235,7 +235,7 @@
 .theme-button__dark-theme #toggleFooter::after {
   left: 22px;
 }
-.theme-button__dark-theme .theme-text-white {
+.theme-button__dark-theme .header__link {
   color: #FFFFFF;
 }
 .theme-button__dark-theme .header__popup-container {
@@ -939,6 +939,7 @@
   background-color: #F4F4F4;
   box-shadow: 0 20px 140px rgba(0, 0, 0, 0.06);
   border-radius: 20px;
+  transition: all 0.5s ease;
 }
 .bicycles__rim-image:hover {
   box-shadow: 0 20px 140px rgba(0, 0, 0, 0.11);
@@ -963,6 +964,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.528vw;
+  transition: all 0.5s ease;
 }
 @media screen and (max-width: 572px) {
   .bicycles__card {
