--- a/styles/modules/blocks/text-block.scss
+++ b/styles/modules/blocks/text-block.scss
@@ -32,7 +32,7 @@
                 display: none;
             }
         }
-        &_position_befor{
+        &_position_before {
             display: none;
             @media screen and (max-width: 572px) {
                 display: inline-block;
