--- a/styles/modules/blocks/flex-element.scss
+++ b/styles/modules/blocks/flex-element.scss
@@ -81,43 +81,8 @@
         margin-left: 2.083vw;
         vertical-align: middle;
     }
-    &__big-background {
-        position: absolute;
-        width: 56.25vw;
-        height: 24.097vw;
-        background-color: #FF007A;
-        opacity: 0.3;
-        right: 0;
-        top: 0;
-        overflow: hidden;
-        opacity: 0;
-        transition: $transition;
-        @media screen and (max-width: 767px) {
-            display: none;
-            }
-    }
     &__bike-fix {
         object-fit: cover;
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
-    }
-    &__small-background {
-        position: absolute;
-        width: 56.25vw;
-        height: 5.486vw;
-        background-color: #FF007A;
-        opacity: 0.3;
-        bottom: 0;
-        right: 0;
-        overflow: hidden;
-        opacity: 0;
-        transition: $transition;
-        @media screen and (max-width: 767px) {
-            display: none;
-            }
-    }
-    &__rim-bike-fix {
         width: 30.556vw;
         height: 20.833vw;
         box-sizing: border-box;
@@ -128,7 +93,7 @@
         box-shadow: -20px 60px 220px rgb(0 0 0 / 25%);
         border-radius: 20px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-        transition: $transition;
+        transition: all 0.5s ease;
         @media screen and (max-width: 767px) {
             top: 151px;
             left: -30px;
@@ -162,24 +127,6 @@
                             } 
             }
     }
-}
-.flex-element__rim-bike-fix_position_middle {
-    top: 27.222vw;
-    @media screen and (max-width: 767px) {
-        top: 151px;
-        }
-}
-.flex-element__rim-bike-fix_position_high {
-    top: 24.097vw;
-    @media screen and (max-width: 767px) {
-        top: 151px;
-        }
-}
-.flex-element__rim-bike-fix_position_low {
-    top: 33.125vw;
-    @media screen and (max-width: 767px) {
-        top: 151px;
-        }
 }
 .flex-element_display_block {
     overflow: visible;
