--- a/styles/modules/blocks/header.scss
+++ b/styles/modules/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
     position: relative;
     font-weight: 400;
-    height: 74px;
+    min-height: 74px;
     @media screen and (max-width: 768px) {
         padding: 0 18px 0 0;
         display: flex;
@@ -12,7 +12,7 @@
         display: flex;
         position: fixed;
         width: 100%;
-        height: 74px;
+        min-height: 74px;
         top: 0;
         text-align: center;
         justify-content: flex-end;
@@ -67,7 +67,7 @@
         display: flex;
         background-color: rgba(0, 0, 0, 0.5);
         width: 100vw;
-        height: 100vh;
+        min-height: 100vh;
         position: fixed;
         margin: 0 auto;
         top: 0;
@@ -78,7 +78,6 @@
         z-index: 2;
     }
     &__popup-container {
-        height: 640px;
         background-color: $backgroundDay;
         position: absolute;
         left: 50%;
