--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,12 +11,14 @@
   margin: 0;
   background-color: #F4F4F4;
   transition: all 0.5s ease;
+  max-width: 1440px;
+  min-width: 320px;
 }
 
 .header {
   position: relative;
   font-weight: 400;
-  height: 74px;
+  min-height: 74px;
 }
 @media screen and (max-width: 768px) {
   .header {
@@ -30,7 +32,7 @@
   display: flex;
   position: fixed;
   width: 100%;
-  height: 74px;
+  min-height: 74px;
   top: 0;
   text-align: center;
   justify-content: flex-end;
@@ -90,7 +92,7 @@
   display: flex;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   position: fixed;
   margin: 0 auto;
   top: 0;
@@ -101,7 +103,6 @@
   z-index: 2;
 }
 .header__popup-container {
-  height: 640px;
   background-color: #F4F4F4;
   position: absolute;
   left: 50%;
@@ -373,11 +374,11 @@
     display: none;
   }
 }
-.text-block__paragraph_position_befor {
+.text-block__paragraph_position_before {
   display: none;
 }
 @media screen and (max-width: 572px) {
-  .text-block__paragraph_position_befor {
+  .text-block__paragraph_position_before {
     display: inline-block;
   }
 }
@@ -483,47 +484,8 @@
   margin-left: 2.083vw;
   vertical-align: middle;
 }
-.flex-element__big-background {
-  position: absolute;
-  width: 56.25vw;
-  height: 24.097vw;
-  background-color: #FF007A;
-  opacity: 0.3;
-  right: 0;
-  top: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-@media screen and (max-width: 767px) {
-  .flex-element__big-background {
-    display: none;
-  }
-}
 .flex-element__bike-fix {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-}
-.flex-element__small-background {
-  position: absolute;
-  width: 56.25vw;
-  height: 5.486vw;
-  background-color: #FF007A;
-  opacity: 0.3;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-@media screen and (max-width: 767px) {
-  .flex-element__small-background {
-    display: none;
-  }
-}
-.flex-element__rim-bike-fix {
   width: 30.556vw;
   height: 20.833vw;
   box-sizing: border-box;
@@ -537,7 +499,7 @@
   transition: all 0.5s ease;
 }
 @media screen and (max-width: 767px) {
-  .flex-element__rim-bike-fix {
+  .flex-element__bike-fix {
     top: 151px;
     left: -30px;
     width: 234px;
@@ -572,33 +534,6 @@
 @media screen and (max-width: 572px) {
   .flex-element__popup_display_none {
     display: none;
-  }
-}
-
-.flex-element__rim-bike-fix_position_middle {
-  top: 27.222vw;
-}
-@media screen and (max-width: 767px) {
-  .flex-element__rim-bike-fix_position_middle {
-    top: 151px;
-  }
-}
-
-.flex-element__rim-bike-fix_position_high {
-  top: 24.097vw;
-}
-@media screen and (max-width: 767px) {
-  .flex-element__rim-bike-fix_position_high {
-    top: 151px;
-  }
-}
-
-.flex-element__rim-bike-fix_position_low {
-  top: 33.125vw;
-}
-@media screen and (max-width: 767px) {
-  .flex-element__rim-bike-fix_position_low {
-    top: 151px;
   }
 }
 
@@ -692,6 +627,7 @@
 
 .road {
   padding: 4.167vw 0 4.167vw 8.333vw;
+  display: none;
 }
 @media screen and (max-width: 572px) {
   .road {
@@ -829,15 +765,6 @@
     display: block;
   }
 }
-.bicycles__cards_highway {
-  display: none;
-}
-.bicycles__cards_gravel {
-  display: none;
-}
-.bicycles__cards_TT {
-  display: none;
-}
 .bicycles__container {
   display: flex;
   align-items: center;
@@ -900,7 +827,6 @@
 }
 @media screen and (max-width: 572px) {
   .bicycles__buttons {
-    display: flex;
     flex-direction: column;
     gap: 0;
     height: 30px;
@@ -925,6 +851,7 @@
 .bicycles__cards {
   gap: 2.083vw;
   padding: 8.333vw 0 4.167vw;
+  display: none;
 }
 @media screen and (max-width: 572px) {
   .bicycles__cards {
@@ -1009,12 +936,9 @@
     border-radius: 2px;
     position: relative;
   }
-  .bicycles__dropdown:hover {
+  .bicycles__dropdown_position_open {
     overflow: visible;
   }
-}
-.bicycles__dropdown:hover .bicycles__buttons {
-  display: flex;
 }
 .bicycles__slider-dots {
   display: none;
